# officecrypto-tool-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ZH.md
examples/: demo.rs
src/: error.rs  lib.rs
src/crypto/: ecma376_agile.rs  ecma376_standard.rs  mod.rs  rc4.rs  rc4_cryptoapi.rs  xor_obfuscation.rs
src/format/: doc97.rs  mod.rs  ppt97.rs  xls97.rs
src/util/: common.rs
tests/: integration_test.rs
